--- a/My_Calculator/MainWindow.xaml
+++ b/My_Calculator/MainWindow.xaml
@@ -6,16 +6,16 @@
         xmlns:local="clr-namespace:My_Calculator"
         mc:Ignorable="d"
         Title="Everett Grassler's Calculator"
-        ShowInTaskbar="True"
         WindowStartupLocation="CenterScreen"
         Icon="./Icons/Calculator_Icon.png"
         Background="Black"
         Height="550" 
         Width="450"
-        MinHeight="550"
+        MinHeight="560"
         MinWidth="350">
 
     <Window.Resources>
+        <!--! Input Button Border Style -->
         <Style x:Key="InputButtonBorder" TargetType="Border">
             <Setter
                 Property="Margin"
@@ -30,6 +30,8 @@
                 Value="1">
             </Setter>
         </Style>
+
+        <!--! Input Button Style -->
         <Style x:Key="InputButton" TargetType="Button">
             <Setter
                 Property="Padding"
@@ -60,6 +62,8 @@
                 Value="1">
             </Setter>
         </Style>
+
+        <!--! Input Number Button Style -->
         <Style x:Key="InputNumberButton" TargetType="Button">
             <Setter
                 Property="Padding"
@@ -94,6 +98,8 @@
                 Value="2">
             </Setter>
         </Style>
+
+        <!--! This Window's Text Block Style -->
         <Style TargetType="TextBlock">
             <Setter
                 Property="Foreground"
@@ -127,7 +133,7 @@
                     </RowDefinition>
                 </Grid.RowDefinitions>
 
-                <!--
+                
                 <Button
                     x:Name="HamburgerMenuButton"
                     Grid.Column="0"
@@ -135,14 +141,13 @@
                     Height="25"
                     MinHeight="15"
                     MinWidth="25"
-                    Foreground="White"
                     Background="Transparent"
                     BorderThickness="0"
                     Margin="0 0 20 0"
                     FontSize="25">
                     <Image Source="./Icons/Hamburger_Menu_Icon.png" />
                 </Button>
-                -->
+                
 
                 <TextBlock
                     x:Name="CalcTypeText" 
@@ -153,7 +158,7 @@
                     Text="Standard">
                 </TextBlock>
 
-                <!--
+                
                 <Button
                     x:Name="HistoryButton"
                     Grid.Column="2"
@@ -161,14 +166,13 @@
                     Height="30"
                     MinHeight="30"
                     MinWidth="30"
-                    Foreground="White"
                     Background="Transparent"
                     BorderThickness="0"
-                    Margin="0 0 0 0"
+                    Margin="20 0 0 0"
                     FontSize="25">
                     <Image Source="./Icons/History_Icon.png" />
                 </Button>
-                -->
+                
             </Grid>
 
 
@@ -188,10 +192,9 @@
             <StackPanel 
                 x:Name="ButtonInputs"
                 Orientation="Vertical"
-                VerticalAlignment="Stretch"
-                Height="347">
+                MinHeight="350">
                 <Grid
-                    MinHeight="347">
+                    MinHeight="350">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition 
                             Width="*">
@@ -517,7 +520,7 @@
                             x:Name="DotButton"
                             Content="."
                             Style="{StaticResource InputButton}"
-                            FontWeight="DemiBold">
+                            FontWeight="ExtraBold">
                         </Button>
                     </Border>
 
@@ -533,17 +536,14 @@
                             FontWeight="DemiBold">
                         </Button>
                     </Border>
-
-
-
-
-
                 </Grid>
 
 
 
 
             </StackPanel>
+            
+            
         </StackPanel>
     </Border>
 </Window>
