--- a/My_Calculator/MainWindow.xaml
+++ b/My_Calculator/MainWindow.xaml
@@ -109,6 +109,7 @@
         </Style>
     </Window.Resources>
 
+
     <Border Padding="7.5">
         <StackPanel>
 
@@ -178,23 +179,32 @@
 
 
             <!-- Output -->
-            <StackPanel>
-                <TextBlock
-                    x:Name="TopOutputText"
-                    Margin="0 10 12 0"
-                    FontSize="25"
-                    TextAlignment="Right"
-                    TextWrapping="Wrap"
-                    Text="">
-                </TextBlock>
-                <TextBlock
-                    x:Name="MainOutputText"
-                    Margin="0 0 12 15"
-                    FontSize="50"
-                    TextAlignment="Right"
-                    TextWrapping="Wrap"
-                    Text="0">
-                </TextBlock>
+            <StackPanel 
+                x:Name="MainOutputPanel"
+                MaxHeight="125">
+                <Viewbox 
+                    StretchDirection="DownOnly"
+                    Stretch="Uniform"
+                    HorizontalAlignment="Right"
+                    Margin="0 10 12 0">
+                    <TextBlock
+                        x:Name="TopOutputText"
+                        FontSize="25"
+                        TextAlignment="Right"
+                        Text=" ">
+                    </TextBlock>
+                </Viewbox>
+                <Viewbox
+                    StretchDirection="DownOnly"
+                    Stretch="Uniform"
+                    HorizontalAlignment="Right"
+                    Margin="0 10 12 10">
+                    <TextBlock
+                        x:Name="MainOutputText"
+                        FontSize="50"
+                        Text="0">
+                    </TextBlock>
+                </Viewbox>
             </StackPanel>
 
 
