--- a/My_Calculator/MainWindow.xaml
+++ b/My_Calculator/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:My_Calculator"
         mc:Ignorable="d"
+        xmlns:enum="clr-namespace:My_Calculator.Helpers.Enums"
         Title="Everett Grassler's Calculator"
         WindowStartupLocation="CenterScreen"
         Icon="./Icons/Calculator_Icon.png"
@@ -147,7 +148,7 @@
                     Background="Transparent"
                     BorderThickness="0"
                     Margin="0 0 20 0"
-                    FontSize="25" Click="HamburgerMenuButton_Click">
+                    Click="HamburgerMenuButton_Click">
                     <Image Source="./Icons/Hamburger_Menu_Icon.png" />
                 </Button>
 
@@ -166,13 +167,12 @@
                     x:Name="HistoryButton"
                     Grid.Column="2"
                     Grid.Row="0"
-                    Height="30"
                     MinHeight="30"
-                    MinWidth="30"
+                    MinWidth="25"
                     Background="Transparent"
                     BorderThickness="0"
                     Margin="20 0 0 0"
-                    FontSize="25" Click="HistoryButton_Click">
+                    Click="HistoryButton_Click">
                     <Image Source="./Icons/History_Icon.png" />
                 </Button>
 
@@ -259,8 +259,9 @@
                         Grid.Row="0"
                         Style="{StaticResource InputButtonBorder}">
                         <Button
-                            x:Name="PercentButton"
-                            Content="%"
+                            x:Name="FactorialButton"
+                            Content="n!"
+                            Tag="factorial"
                             Click="MathFunctionButton_Click"
                             Style="{StaticResource InputButton}">
                         </Button>
@@ -274,6 +275,7 @@
                         <Button
                             x:Name="SquareRootButton"
                             Content="√"
+                            Tag="squareroot"
                             Click="MathFunctionButton_Click"
                             Style="{StaticResource InputButton}">
                         </Button>
@@ -285,9 +287,9 @@
                         Grid.Row="0"
                         Style="{StaticResource InputButtonBorder}">
                         <Button
-                            x:Name="PowerButton"
-                            Content="x²"
-                            Tag="^"
+                            x:Name="ExponentButton"
+                            Content="Exp"
+                            Tag="exponent"
                             Click="MathFunctionButton_Click"
                             Style="{StaticResource InputButton}">
                         </Button>
@@ -300,7 +302,8 @@
                         Style="{StaticResource InputButtonBorder}">
                         <Button
                             x:Name="ModulusButton"
-                            Content="¹/ᵪ"
+                            Content="Mod"
+                            Tag="modulus"
                             Click="MathFunctionButton_Click"
                             Style="{StaticResource InputButton}">
                         </Button>
