--- a/My_Calculator/SelectConversion.xaml
+++ b/My_Calculator/SelectConversion.xaml
@@ -1,9 +1,18 @@
-﻿<Application x:Class="My_Calculator.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:My_Calculator"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
+﻿<Window x:Class="My_Calculator.SelectConversion"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:My_Calculator"
+        mc:Ignorable="d"
+        WindowStartupLocation="CenterScreen"
+        Icon="./Icons/Calculator_Icon.png"
+        Background="Black"
+        Title="Select Conversion Type" 
+        Height="450"
+        Width="400">
+
+    <Window.Resources>
         <!--! Input Button Border Style -->
         <Style x:Key="InputButtonBorder" TargetType="Border">
             <Setter
@@ -115,6 +124,22 @@
                 Property="BorderThickness"
                 Value="2">
             </Setter>
-        </Style>        
-    </Application.Resources>
-</Application>
+        </Style>
+
+        <!--! This Window's Text Block Style -->
+        <Style TargetType="TextBlock">
+            <Setter
+                Property="Foreground"
+                Value="LightGray">
+            </Setter>
+        </Style>
+    </Window.Resources>
+
+    <Border Padding="7.5">
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <StackPanel x:Name="MainStackPanel">
+
+            </StackPanel>
+        </ScrollViewer>
+    </Border>
+</Window>
