--- a/My_Calculator/ConversionWindows/NumeralSystemConversionWindow.xaml
+++ b/My_Calculator/ConversionWindows/NumeralSystemConversionWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="My_Calculator.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Window x:Class="My_Calculator.ConversionWindows.NumeralSystemConversionWindow"
+       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:My_Calculator"
         mc:Ignorable="d"
-        Title="Everett Grassler's Calculator"
+        Title="Numeral System Conversion"
         WindowStartupLocation="CenterScreen"
-        Icon="./Icons/Calculator_Icon.png"
+        Icon="../Icons/Calculator_Icon.png"
         Background="Black"
         Height="560" 
         Width="500"
@@ -15,6 +15,7 @@
         MaxHeight="560"
         MinWidth="400"
         Keyboard.KeyUp="Window_KeyUp">
+
 
     <Window.Resources>
         <!--! This Window's Text Block Style -->
@@ -63,7 +64,7 @@
                     BorderThickness="0"
                     Margin="0 0 20 0"
                     Click="HamburgerMenuButton_Click">
-                    <Image Source="./Icons/Hamburger_Menu_Icon.png" />
+                    <Image Source="../Icons/Hamburger_Menu_Icon.png" />
                 </Button>
 
 
@@ -73,7 +74,7 @@
                     Grid.Row="0"
                     FontSize="20"
                     FontWeight="DemiBold"
-                    Text="Standard">
+                    Text="Numeral System Conversions">
                 </TextBlock>
 
 
@@ -87,7 +88,7 @@
                     BorderThickness="0"
                     Margin="20 0 0 0"
                     Click="HistoryButton_Click">
-                    <Image Source="./Icons/History_Icon.png" />
+                    <Image Source="../Icons/History_Icon.png" />
                 </Button>
 
             </Grid>
@@ -135,20 +136,38 @@
                 x:Name="ButtonInputs"
                 Orientation="Vertical"
                 MinHeight="350">
-                <Grid MinHeight="350">
+                <Grid
+                    MinHeight="350">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
+                        <ColumnDefinition 
+                            Width="*">
+                        </ColumnDefinition>
+                        <ColumnDefinition 
+                            Width="*">
+                        </ColumnDefinition>
+                        <ColumnDefinition 
+                            Width="*">
+                        </ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                        <RowDefinition />
-                        <RowDefinition />
-                        <RowDefinition />
-                        <RowDefinition />
+                        <RowDefinition
+                            Height="*">
+                        </RowDefinition>
+                        <RowDefinition
+                            Height="*">
+                        </RowDefinition>
+                        <RowDefinition
+                            Height="*">
+                        </RowDefinition>
+                        <RowDefinition
+                            Height="*">
+                        </RowDefinition>
+                        <RowDefinition
+                            Height="*">
+                        </RowDefinition>
+                        <RowDefinition
+                            Height="*">
+                        </RowDefinition>
                     </Grid.RowDefinitions>
 
                     <!--! Row 0 Buttons -->
@@ -158,10 +177,10 @@
                         Grid.Row="0"
                         Style="{StaticResource InputButtonBorder}">
                         <Button
-                            x:Name="FactorialButton"
-                            Content="n!"
-                            Tag="factorial"
-                            Click="MathFunctionButton_Click"
+                            x:Name="BinaryButton"
+                            Content="Bin"
+                            Tag="Binary"
+                            Click="BinaryButton_Click"
                             Style="{StaticResource InputButton}">
                         </Button>
                     </Border>
@@ -172,10 +191,10 @@
                         Grid.Row="0"
                         Style="{StaticResource InputButtonBorder}">
                         <Button
-                            x:Name="SquareRootButton"
-                            Content="√"
-                            Tag="squareroot"
-                            Click="MathFunctionButton_Click"
+                            x:Name="OctalButton"
+                            Content="Octal"
+                            Tag="Octal"
+                            Click="OctalButton_Click"
                             Style="{StaticResource InputButton}">
                         </Button>
                     </Border>
@@ -186,24 +205,10 @@
                         Grid.Row="0"
                         Style="{StaticResource InputButtonBorder}">
                         <Button
-                            x:Name="ExponentButton"
-                            Content="Exp"
-                            Tag="exponent"
-                            Click="MathFunctionButton_Click"
-                            Style="{StaticResource InputButton}">
-                        </Button>
-                    </Border>
-
-                    <!-- Modulus Inverse Button -->
-                    <Border
-                        Grid.Column="3"
-                        Grid.Row="0"
-                        Style="{StaticResource InputButtonBorder}">
-                        <Button
-                            x:Name="ModulusButton"
-                            Content="Mod"
-                            Tag="modulus"
-                            Click="MathFunctionButton_Click"
+                            x:Name="HexadecimalButton"
+                            Content="Hex"
+                            Tag="Hexadecimal"
+                            Click="HexadecimalButton_Click"
                             Style="{StaticResource InputButton}">
                         </Button>
                     </Border>
@@ -249,20 +254,6 @@
                         </Button>
                     </Border>
 
-                    <!-- Division Button -->
-                    <Border
-                        Grid.Column="3"
-                        Grid.Row="1"
-                        Style="{StaticResource InputButtonBorder}">
-                        <Button
-                            x:Name="DivisionButton"
-                            Content="÷"
-                            Tag="/"
-                            Click="OperatorButton_Click"
-                            Style="{StaticResource InputButton}"
-                            FontWeight="DemiBold">
-                        </Button>
-                    </Border>
 
 
                     <!--! Row 2 Buttons -->
@@ -302,21 +293,6 @@
                             Content="9"
                             Click="InputNumberButton_Click"
                             Style="{StaticResource InputNumberButton}">
-                        </Button>
-                    </Border>
-
-                    <!-- Multiply Button -->
-                    <Border
-                        Grid.Column="3"
-                        Grid.Row="2"
-                        Style="{StaticResource InputButtonBorder}">
-                        <Button
-                            x:Name="MultiplyButton"
-                            Content="×"
-                            Tag="*"
-                            Click="OperatorButton_Click"
-                            Style="{StaticResource InputButton}"
-                            FontWeight="DemiBold">
                         </Button>
                     </Border>
 
@@ -361,21 +337,6 @@
                         </Button>
                     </Border>
 
-                    <!-- Subtract Button -->
-                    <Border
-                        Grid.Column="3"
-                        Grid.Row="3"
-                        Style="{StaticResource InputButtonBorder}">
-                        <Button
-                            x:Name="SubtractButton"
-                            Content="−"
-                            Tag="-"
-                            Click="OperatorButton_Click"
-                            Style="{StaticResource InputButton}"
-                            FontWeight="DemiBold">
-                        </Button>
-                    </Border>
-
 
                     <!--! Row 4 Buttons -->
                     <!-- One Button -->
@@ -414,21 +375,6 @@
                             Content="3"
                             Click="InputNumberButton_Click"
                             Style="{StaticResource InputNumberButton}">
-                        </Button>
-                    </Border>
-
-                    <!-- Addition Button -->
-                    <Border
-                        Grid.Column="3"
-                        Grid.Row="4"
-                        Style="{StaticResource InputButtonBorder}">
-                        <Button
-                            x:Name="AdditionButton"
-                            Content="+"
-                            Tag="+"
-                            Click="OperatorButton_Click"
-                            Style="{StaticResource InputButton}"
-                            FontWeight="DemiBold">
                         </Button>
                     </Border>
 
@@ -501,4 +447,5 @@
 
         </StackPanel>
     </Border>
+
 </Window>
