--- a/My_Calculator/SelectConversionWindow.xaml
+++ b/My_Calculator/SelectConversionWindow.xaml
@@ -12,134 +12,9 @@
         Height="450"
         Width="400">
 
-    <Window.Resources>
-        <!--! Input Button Border Style -->
-        <Style x:Key="InputButtonBorder" TargetType="Border">
-            <Setter
-                Property="Margin"
-                Value="1">
-            </Setter>
-            <Setter
-                Property="BorderBrush"
-                Value="Gray">
-            </Setter>
-            <Setter
-                Property="BorderThickness"
-                Value="1">
-            </Setter>
-        </Style>
-
-        <!--! Input Button Style -->
-        <Style x:Key="InputButton" TargetType="Button">
-            <Setter
-                Property="Padding"
-                Value="10">
-            </Setter>
-            <Setter
-                Property="FontSize"
-                Value="24">
-            </Setter>
-            <Setter
-                Property="Foreground"
-                Value="Black">
-            </Setter>
-            <Setter
-                Property="Background"
-                Value="DarkGray">
-            </Setter>
-            <Setter
-                Property="Opacity"
-                Value="0.9">
-            </Setter>
-            <Setter
-                Property="BorderBrush"
-                Value="LightGray">
-            </Setter>
-            <Setter
-                Property="BorderThickness"
-                Value="1">
-            </Setter>
-
-            <!-- Override default style for IsMouseOver -->
-            <!-- (Required for changing what happens on IsMouseOver) -->
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border 
-                            Background="{TemplateBinding Background}" 
-                            BorderBrush="Gray" 
-                            BorderThickness="1">
-                            <ContentPresenter 
-                                HorizontalAlignment="Center" 
-                                VerticalAlignment="Center">
-                            </ContentPresenter>
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-
-            <Style.Triggers>
-                <Trigger
-                    Property="IsMouseOver"
-                    Value="True">
-                    <Setter
-                        Property="Background"
-                        Value="LightGray">
-                    </Setter>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-
-        <!--! Input Number Button Style -->
-        <Style x:Key="InputNumberButton" TargetType="Button">
-            <Setter
-                Property="Padding"
-                Value="10">
-            </Setter>
-            <Setter
-                Property="FontSize"
-                Value="22">
-            </Setter>
-            <Setter
-                Property="FontWeight"
-                Value="DemiBold">
-            </Setter>
-            <Setter
-                Property="Foreground"
-                Value="Black">
-            </Setter>
-            <Setter
-                Property="Background"
-                Value="DimGray">
-            </Setter>
-            <Setter
-                Property="Opacity"
-                Value="1">
-            </Setter>
-            <Setter
-                Property="BorderBrush"
-                Value="DarkGray">
-            </Setter>
-            <Setter
-                Property="BorderThickness"
-                Value="2">
-            </Setter>
-        </Style>
-
-        <!--! This Window's Text Block Style -->
-        <Style TargetType="TextBlock">
-            <Setter
-                Property="Foreground"
-                Value="LightGray">
-            </Setter>
-        </Style>
-    </Window.Resources>
-
     <Border Padding="7.5">
         <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <StackPanel x:Name="MainStackPanel">
-
-            </StackPanel>
+            <StackPanel x:Name="MainStackPanel" />
         </ScrollViewer>
     </Border>
 </Window>
