--- a/My_Calculator/ConversionWindows/TemperatureConversionWindow.xaml
+++ b/My_Calculator/ConversionWindows/TemperatureConversionWindow.xaml
@@ -1,16 +1,15 @@
-﻿<Window x:Class="My_Calculator.ConversionWindows.TimeConversionWindow"
+﻿<Window x:Class="My_Calculator.ConversionWindows.TemperatureConversionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:My_Calculator.ConversionWindows"
         mc:Ignorable="d"
-        Title="TimeConversionWindow"
-        Icon="../Icons/Calculator_Icon.png"
-        Height="610"
-        Width="500"
-        MinWidth="400"
+        Title="TemperatureConversionWindow"
         Background="Black"
+        Height="570"
+        Width="450"
+        MinWidth="400"
         KeyUp="Window_KeyUp">
 
     <Window.Resources>
@@ -91,7 +90,7 @@
                         Grid.Row="0"
                         FontSize="20"
                         FontWeight="DemiBold"
-                        Text="Time Conversions">
+                        Text="Temperature Conversions">
                     </TextBlock>
 
 
@@ -154,14 +153,11 @@
                             MaxHeight="50"
                             VerticalContentAlignment="Bottom"                        
                             SelectionChanged="UnitComboBox_SelectionChanged">
-                            <ComboBoxItem Tag="Seconds" IsSelected="True">
-                                <TextBlock Foreground="Black" Text="s" />
+                            <ComboBoxItem Tag="Celsius" IsSelected="True">
+                                <TextBlock Foreground="Black" Text="°C" />
                             </ComboBoxItem>
-                            <ComboBoxItem Tag="Minutes">
-                                <TextBlock Foreground="Black" Text="min" />
-                            </ComboBoxItem>
-                            <ComboBoxItem Tag="Hours">
-                                <TextBlock Foreground="Black" Text="hr" />
+                            <ComboBoxItem Tag="Fahrenheit">
+                                <TextBlock Foreground="Black" Text="°F" />
                             </ComboBoxItem>
                         </ComboBox>
                     </Viewbox>
@@ -180,7 +176,6 @@
                         <Grid.RowDefinitions>
                             <RowDefinition />
                             <RowDefinition />
-                            <RowDefinition />
                         </Grid.RowDefinitions>
 
 
@@ -194,8 +189,8 @@
                                 Stretch="Uniform"
                                 HorizontalAlignment="Left">
                                 <Label
-                                    x:Name="SecondsLabel"
-                                    Content="Seconds"
+                                    x:Name="CelsiusLabel"
+                                    Content="Celsius"
                                     FontSize="20"
                                     FontWeight="DemiBold"
                                     Foreground="WhiteSmoke"
@@ -213,27 +208,8 @@
                                 Stretch="Uniform"
                                 HorizontalAlignment="Left">
                                 <Label
-                                    x:Name="MinutesLabel"
-                                    Content="Minutes"
-                                    FontSize="20"
-                                    FontWeight="DemiBold"
-                                    Foreground="WhiteSmoke"
-                                    HorizontalAlignment="Left">
-                                </Label>
-                            </Viewbox>
-                        </Border>
-
-                        <Border
-                            Grid.Column="0"
-                            Grid.Row="2"
-                            Style="{StaticResource InputButtonBorder}">
-                            <Viewbox
-                                StretchDirection="DownOnly"
-                                Stretch="Uniform"
-                                HorizontalAlignment="Left">
-                                <Label
-                                    x:Name="HoursLabel"
-                                    Content="Hours"
+                                    x:Name="FahrenheitLabel"
+                                    Content="Fahrenheit"
                                     FontSize="20"
                                     FontWeight="DemiBold"
                                     Foreground="WhiteSmoke"
@@ -253,7 +229,7 @@
                                 Stretch="Uniform"
                                 HorizontalAlignment="Left">
                                 <Label 
-                                    x:Name="SecondsCell"
+                                    x:Name="CelsiusCell"
                                     Content=" "
                                     FontSize="20"
                                     FontWeight="DemiBold"
@@ -272,7 +248,7 @@
                                 Stretch="Uniform"
                                 HorizontalAlignment="Left">
                                 <Label 
-                                    x:Name="MinutesCell"
+                                    x:Name="FahrenheitCell"
                                     Content=" "
                                     FontSize="20"
                                     FontWeight="DemiBold"
@@ -281,27 +257,6 @@
                                 </Label>
                             </Viewbox>
                         </Border>
-
-                        <Border
-                            Grid.Column="1"
-                            Grid.Row="2"
-                            Style="{StaticResource InputButtonBorder}">
-                            <Viewbox
-                                StretchDirection="DownOnly"
-                                Stretch="Uniform"
-                                HorizontalAlignment="Left">
-                                <Label 
-                                    x:Name="HoursCell"
-                                    Content=" "
-                                    FontSize="20"
-                                    FontWeight="DemiBold"
-                                    Foreground="WhiteSmoke"
-                                    HorizontalAlignment="Center">
-                                </Label>
-                            </Viewbox>
-                        </Border>
-
-
                     </Grid>
                 </Border>
 
