Added missing window icons

--- a/My_Calculator/ConversionWindows/WeightConversionWindow.xaml
+++ b/My_Calculator/ConversionWindows/WeightConversionWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:My_Calculator.ConversionWindows"
         mc:Ignorable="d"
-        Title="WeightConversionWindow" 
+        Title="Weight Conversion Window"
+        Icon="../Icons/Calculator_Icon.png"
         Background="Black"
         MinWidth="400"
         Width="450"
