--- a/My_Calculator/ConversionWindows/TemperatureConversionWindow.xaml
+++ b/My_Calculator/ConversionWindows/TemperatureConversionWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:My_Calculator.ConversionWindows"
         mc:Ignorable="d"
-        Title="TemperatureConversionWindow"
+        Title="Temperature Conversion Window"
+        Icon="../Icons/Calculator_Icon.png"
         Background="Black"
         Height="570"
         Width="450"
